# meson-with-gtest-example

./: .gitignore  main.cpp  meson.build
lib/: binary_search.cpp  binary_search.hpp
src/: main.cpp
test/: main.cpp
